[package]
name = "snipe"
version = "0.1.0"
edition = "2021"

[features]
# test-sbf=[]

[dependencies]
anyhow = "1.0.86"
assert_matches = "1.5.0"
borsh = "1.5.1"
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
comfy-table = "7.1.1"
dotenvy = "0.15.7"
rocksdb = "0.22.0"
solana-logger = "2.0.2"
solana-program-test = "2.0.2"
solana-sdk = "2.0.2"
spl-token = "6.0.0"
thiserror = "1.0.62"
tokio = "1.38.1"
